client/src/scss/util/Card/Card.module.scss
.heroCard {
  position: relative;
  // right: 30px;
  background: var(--white-color);
  color: var(--primary-color);
  width: 450px;
  max-width: 500px;
  height: 500px;
  max-height: 450px;
  box-shadow: var(--btn-box-shadow);
  border-radius: 5px;
}

.cardContainer {
  margin-top: 5%;
}

.header {
  text-align: center;
  & .heading {
    padding: 20px;
    font-size: 1.5rem;
    color: var(--primary-color);
  }

  & .date {
    font-size: 1.4rem;
    font-weight: normal;
    color: var(--description-color);
  }
}

.lists {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin: 0 auto;

  li {
    padding: 10px 5px;
    margin: 0 auto;
    font-size: 1.4rem;

    a {
      color: var(--dark-cyan-color);

      &:hover {
        text-decoration: underline;
        color: var(--dark-cyan-hover-color);
      }
    }
  }
}

.tag {
  & .tagContainer {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }
  &::before {
    content: "";
    display: block;
    border-top: 1px solid var(--hr-color);
  }

  .tags {
    position: relative;
    top: 30px;
    background: var(--primary-color);
    padding: 2px 7px;
    border-radius: 5px;
    color: var(--white-color);
    white-space: nowrap;
    height: 32px;
    margin: 0 5px;

    h6 {
      position: relative;
      font-size: 0.9rem;
      font-weight: normal;
      text-align: center;
      top: 3px;
    }
  }
}

.solutionCard {
  position: relative;
  background: var(--white-color);
  color: var(--primary-color);
  width: 440px;
  max-width: 700px;
  height: 250px;
  max-height: 450px;
  box-shadow: var(--btn-box-shadow);
  border-radius: 5px;
  margin: 10px;

  & .solutionCardContainer {
    margin-top: 10px;
    position: relative;
    top: 20px;
  }

  & .solutionHeader {
    position: relative;
    top: 20px;
  }

  & .solutionCount {
    position: relative;
    display: flex;
    justify-content: space-between;

    & .viewHeading,
    & .voteHeading {
      position: absolute;
      left: 30%;
      color: var(--description-color);
      & span {
        color: var(--primary-color);
        font-weight: bold;
      }
      font-weight: normal;
    }

    & .voteHeading {
      left: 60%;
    }
  }
}

$layout-breakpoint-max-width: 997px;
$layout-breakpoint-min-width: 998px;
$xsm-layout-breakpoint-max-width: 667px;
@media (max-width: $layout-breakpoint-max-width) {
  .heroCard {
    width: 350px;

    & .heading {
      font-size: 1.2rem;
    }

    .tags {
      left: 49px !important;
      margin: 2px 5px;
    }

    & .tagContainer {
      display: flex;
      flex-direction: column;
      width: 45%;
      margin: 0 15%;
    }
  }

  .solutionCard {
    width: 353px;
    margin: 0;

    & .solutionCardContainer {
      & .heading {
        font-size: 1.2rem;
      }

      & .lists {
        & li {
          font-size: 1rem;
        }
      }

      & .solutionCount {
        position: relative;
        right: 15px;
      }
    }
  }
}

